--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
         <div class="header">&#128608 A Little Atlas of English Early Modern Drama &#128610</div>
-        <div class="info-box">This map charts most geographical items nominated in about 400 early modern English plays. Move around, zoom, and click on any location to see the related plays and access them in the <a href="https://dracor.org/eng">English Drama Corpus (EngDraCor)</a>. Several types of toponyms (cities, countries, continents, natural features) have been extracted through NLP methods, manually reviewed, and geocoded with <i>Nominatim</i> and LLMs. <br><small>Item names with * have been postcorrected. You can dowload the whole data dump in JSON format <a href="https://github.com/atlas-emed/atlas-emed.github.io/blob/main/database.json">here</a>. Beta version, under consideration for <a href="https://2024.computational-humanities-research.org/">CHR Aarhus 2024</a>.</div>
+        <div class="info-box">This map charts most geographical items nominated in about 400 early modern English plays. Move around, zoom, and click on any location to see the related plays and access them in the <a href="https://dracor.org/eng">English Drama Corpus (EngDraCor)</a>. Several types of toponyms (cities, countries, continents, natural features) have been extracted through NLP methods, manually reviewed, and geocoded with <i>Nominatim</i> and LLMs. <br><small>Item names with * have been postcorrected. You can dowload the whole data dump in JSON format <a href="https://github.com/atlas-emed/atlas-emed.github.io/blob/main/database.json">here</a>. Beta version.</div>
         <div id="map"></div>
     </div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
